--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.8"
-
 services:
-  pki2fa:
-    build: .
+  pki-2fa:
+    build:
+      context: .
     container_name: pki-2fa
     ports:
       - "8080:8080"
@@ -16,4 +16,3 @@ services:
 volumes:
   seed-data:
   cron-output:
-
